2001-11-25  Bruno Haible  <bruno@clisp.org>

	* msginit.c (no_translator): New variable.
	(long_options): Add option --no-translator.
	(main): Handle option --no-translator.
	(usage): Document option --no-translator.
	(po_revision_date): Add header argument. Return POT's creation date
	if no_translator.
	(last_translator): Return a dummy string if no_translator.
	(language_team): Likewise.
	(fields): Allow getter with 0 or 1 argument.
	(get_field): New function.
	(fill_header): Call getter with 0 or 1 argument.

2001-11-25  Bruno Haible  <bruno@clisp.org>

	* msginit.c (canonical_locale_charset): Return the charset of 'locale'
	if available.
	(get_title): Return a correct value even if 'locale' is a nonexistent
	locale.

2001-11-24  Bruno Haible  <bruno@clisp.org>

	* urlget.c (fetch): Call execute_java_class with quiet=true. If Java
	program failed, try wget or lynx.

	* read-java.c (msgdomain_read_java): Update for changed
	execute_java_class parameter list.

2001-11-24  Bruno Haible  <bruno@clisp.org>

	* msgexec.c (process_message): Really process each plural form once.

2001-11-17  Bruno Haible  <haible@clisp.cons.org>

	* msgfmt.c (is_nonobsolete): New function.
	(main): Remove obsolete messages after reading all input files.
	(check_header_entry): New function, extracted from
	format_directive_message.
	(format_directive_message): Perform duplicate checking also on
	obsolete, untranslated and fuzzy messages, like msgmerge and the
	other tools do. Put also obsolete, untranslated and fuzzy messages
	on the result list, but mark them obsolete.
	(read_po_file): Call po_lex_pass_obsolete_entries.

2001-11-17  Bruno Haible  <haible@clisp.cons.org>

	* po.c (po_callback_message): Ignore obsolete header entries, for
	consistency with msgdomain_list_print(), compare_po_locale_charsets(),
	iconv_message_list(), catenate_msgdomain_list().

2001-11-17  Bruno Haible  <haible@clisp.cons.org>

	* msgfmt.c (struct msg_domain): Remove symbol_tab field.